# smart-trip-planner

./: .env.example  .gitignore  pyproject.toml
src/smart_trip_planner/: __init__.py  cli.py  config.py
src/smart_trip_planner/agents/: budget_enforcer.py  optimizer.py  request_parser.py
src/smart_trip_planner/graph/: builder.py  edges.py  nodes.py  state.py
src/smart_trip_planner/models/: trip.py
src/smart_trip_planner/subgraphs/activities/: graph.py  state.py
src/smart_trip_planner/subgraphs/flights/: graph.py  state.py
src/smart_trip_planner/subgraphs/hotels/: graph.py  state.py
src/smart_trip_planner/tools/: travel_search.py
