[project]
name = "smart-trip-planner"
version = "0.1.0"
description = "Smart trip planner using multi-agent search, real-time streaming, budget enforcement"
readme = "README.md"
authors = [
    { name = "Sachin Mehrotra", email = "sachin2040@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "litellm>=1.40",
    "langfuse>=3.0,<4.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "click>=8.0",
    "rich>=13.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

[project.scripts]
smart-trip-planner = "smart_trip_planner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"